<resources>
    <string name="app_name">TunisCount</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="linktosite">
        <a href="http://www.tuniscount.com/prices-drop">       </a>
    </string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_carte">cart</string>

    <string name="register">S\'inscrire</string>
    <string name="Title_activiter_register">RegisterActiviter</string>
    <string name="register_title">Inscription</string>
    <string name="pseudo">pseudo</string>
    <string name="email">email</string>
    <string name="password">mot de passe</string>
    <string name="password2">repeter votre mot de passe</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="communicate">Communicate</string>
    <string name="offres_et_promotions">Offres et Promotions</string>
</resources>
