<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context=".Signup">

    <TextView
        android:id="@+id/inscription"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="114dp"
        android:layout_marginRight="114dp"

        android:layout_marginBottom="411dp"
        android:singleLine="false"
        android:text="@string/register_title"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        app:fontFamily="sans-serif-light" />

    <EditText
        android:id="@+id/et_pseudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="231dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:hint="@string/pseudo"
        android:imeOptions="actionNext"
        android:includeFontPadding="false"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textIsSelectable="false" />

    <EditText
        android:id="@+id/et_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:hint="@string/password2"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginRight="-2dp"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_pseudo"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:layout_below="@+id/et_password2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="126dp"
        android:layout_marginLeft="126dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="125dp"
        android:layout_marginRight="125dp"
        android:layout_marginBottom="95dp"
        android:hapticFeedbackEnabled="false"
        android:text="@string/register"
        android:textColor="@color/vpi__background_holo_dark" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="271dp"
        android:layout_height="79dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        app:srcCompat="@drawable/logopng" />

</RelativeLayout>